--- a/package.json
+++ b/package.json
@@ -9,22 +9,31 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.0.2",
+    "@expo/vector-icons": "^14.0.3",
     "@radix-ui/react-icons": "^1.3.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/checkbox": "^0.5.17",
+    "@react-navigation/native": "^6.1.18",
+    "@supabase/supabase-js": "^2.45.4",
     "@types/react": "~18.2.79",
     "expo": "~51.0.28",
+    "expo-auth-session": "~5.5.2",
+    "expo-av": "~14.0.7",
     "expo-constants": "~16.0.2",
+    "expo-document-picker": "~12.0.2",
+    "expo-image-picker": "~15.0.7",
     "expo-linear-gradient": "~13.0.2",
     "expo-linking": "~6.3.1",
-    "expo-router": "~3.5.23",
+    "expo-router": "^3.5.23",
     "expo-status-bar": "~1.12.1",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-gesture-handler": "^2.19.0",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-svg": "15.2.0",
+    "react-native-url-polyfill": "^2.0.0",
     "typescript": "~5.3.3"
   },
   "devDependencies": {
